# HT16_P2-EL2425

./: .gitignore  CMakeLists.txt  README.md
centerline_mpc/: CMakeLists.txt  package.xml
centerline_mpc/launch/: launcher.launch
centerline_mpc/src/: dist_finder_lidar.py  logger_inputs.py  logger_states.py  predictive_controller.py  serial_transmitter.py
centerline_pid/: CMakeLists.txt  dist_finder_lidar.py  package.xml
centerline_pid/launch/: launcher.launch  starter.launch
centerline_pid/src/: dist_finder_lidar.py  dist_finder_lidar_2r.py  dist_finder_lidar_3r.py  logger_inputs.py  logger_states.py  pid_controller.py  serial_transmitter.py
circular_mpc/: CMakeLists.txt  package.xml
circular_mpc/cfg/: config.cfg  dist_finder_mocap.cfg  predictive_controller.cfg
circular_mpc/launch/: launcher.launch
circular_mpc/src/: dist_finder_mocap.py  kill_switch.py  logger_inputs.py  logger_states.py  mocap_publisher.py  pid_controller.py  predictive_controller.py  predictive_controller.py~  serial_transmitter.py  t.py  trajectory_planner.py  trajectory_planner.py.bak
circular_pid/: CMakeLists.txt  package.xml
circular_pid/launch/: starter.launch
circular_pid/src/: dist_finder_lidar.py  dist_finder_mocap.py  kill_switch.py  logger_inputs.py  logger_states.py  mocap_publisher.py  pid_controller.py  pid_controller_discrete.py  serial_transmitter.py  trajectory_planner.py
slip_control_communications/: CMakeLists.txt
slip_control_communications/msg/: input_pid.msg  pose.msg  pose_and_reference.msg
teleop/: CMakeLists.txt  package.xml
(+4 files in other folders)
